compiler/testData/diagnostics/tests/annotations/InheritingAnnotationClass.fir.kt
annotation class AnnKlass

class Child : <!FINAL_SUPERTYPE!>AnnKlass<!>
